added load from file function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</div>
 		<button id="download">Download</button>
 		<form id="jsonForm">
-			<input type="file" id="jsonFile" accept=".json" />
+			<input type="file" id="jsonFile" accept=".json" name="jsonFile" />
 			<button type="submit">Load JSON</button>
 		</form>
 	</body>
